[gd_scene load_steps=51 format=3 uid="uid://7cgsasybcd18"]

[ext_resource type="Script" uid="uid://yxcxguixvey" path="res://scenes/game.gd" id="1_5newe"]
[ext_resource type="PackedScene" uid="uid://btamyw4txrvit" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="AudioStream" uid="uid://d22vy5qo5lt2o" path="res://Music/calming-rain-257596.mp3" id="5_p57ef"]
[ext_resource type="AudioStream" uid="uid://bc62vreuikch0" path="res://Music/dry-thunder-364468.mp3" id="7_u5sy4"]
[ext_resource type="Script" uid="uid://ni4g0tkl7njy" path="res://scenes/area_2d.gd" id="8_e1j6l"]
[ext_resource type="Script" uid="uid://cxitp8j7cupf3" path="res://scenes/fridge.gd" id="9_sww3w"]
[ext_resource type="PackedScene" uid="uid://g8kn4thbgeo4" path="res://scenes/plant.tscn" id="9_vtaks"]
[ext_resource type="Texture2D" uid="uid://cxpyyi4a7rrje" path="res://sprites/Fridge Sprite.png" id="10_qnb83"]
[ext_resource type="Script" uid="uid://bsdc6xfm3cglh" path="res://scripts/canvas_layer.gd" id="10_vtaks"]
[ext_resource type="FontFile" uid="uid://oat1w7uvyamo" path="res://fonts/Special_Elite/SpecialElite-Regular.ttf" id="11_kvpfn"]
[ext_resource type="Script" uid="uid://b3gtaghnuy2cn" path="res://scenes/journal_area.gd" id="11_suyxu"]
[ext_resource type="AudioStream" uid="uid://5unghyvweeq5" path="res://Music/fridge-open-and-close-100149.mp3" id="11_sww3w"]
[ext_resource type="Texture2D" uid="uid://5bavhvbvmvsn" path="res://sprites/Window.PNG" id="12_ir15t"]
[ext_resource type="Script" uid="uid://cis3o2721306s" path="res://scenes/plant_area.gd" id="12_pl11u"]
[ext_resource type="Texture2D" uid="uid://bvo5pti0gv222" path="res://sprites/toaster.PNG" id="12_rysoc"]
[ext_resource type="Texture2D" uid="uid://5df30iglffb5" path="res://sprites/IMG_4332.PNG" id="12_trtic"]
[ext_resource type="Texture2D" uid="uid://cbgg0365ijw32" path="res://sprites/IMG_4333.PNG" id="13_ir15t"]
[ext_resource type="Script" uid="uid://cox5mysd3py5f" path="res://scenes/umbrella_area.gd" id="13_sgl2t"]
[ext_resource type="Texture2D" uid="uid://diu7gqtk2tda4" path="res://sprites/Journal and Phone.PNG" id="13_ssvqc"]
[ext_resource type="Texture2D" uid="uid://dutw2nb5jm4dn" path="res://sprites/umbrella stand.PNG" id="14_1kice"]
[ext_resource type="Script" uid="uid://c1r02q2c6ke1s" path="res://scenes/kitty_area.gd" id="14_bhx41"]
[ext_resource type="Texture2D" uid="uid://bic3jxhxaqdbp" path="res://sprites/IMG_4334.png" id="14_ca42v"]
[ext_resource type="Script" uid="uid://ccfojtkkfghpn" path="res://scenes/alarm_area.gd" id="15_e1j6l"]
[ext_resource type="Texture2D" uid="uid://tgvxldxa8qqq" path="res://sprites/kitty.png" id="15_pl11u"]
[ext_resource type="Texture2D" uid="uid://c0f42bmm6xqtu" path="res://sprites/Alarm clock.png" id="16_37s47"]
[ext_resource type="Texture2D" uid="uid://chensgob5kiq" path="res://sprites/zoom in 1.PNG" id="16_264po"]
[ext_resource type="Script" uid="uid://depoik3m5d8fq" path="res://scenes/toaster_area.gd" id="16_qnb83"]
[ext_resource type="AudioStream" uid="uid://dptsngylj68ji" path="res://Music/melancholic-tranquility-364766.mp3" id="23_bt5mj"]
[ext_resource type="Script" uid="uid://dkhhghrpcm1dp" path="res://scenes/zoom_in_1.gd" id="23_suyxu"]
[ext_resource type="PackedScene" uid="uid://bjlwfjxkywprp" path="res://scenes/scene_transition_animation.tscn" id="30_sgl2t"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yqjtg"]
distance = 3.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lbhrr"]
distance = -16.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_iywne"]
normal = Vector2(-1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgl2t"]
size = Vector2(328, 860)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl11u"]
size = Vector2(435, 260)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e1j6l"]
radius = 135.5
height = 564.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sww3w"]
atlas = ExtResource("10_qnb83")
region = Rect2(0, 0, 1112, 1604)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnb83"]
atlas = ExtResource("10_qnb83")
region = Rect2(1112, 0, 1112, 1604)

[sub_resource type="AtlasTexture" id="AtlasTexture_suyxu"]
atlas = ExtResource("10_qnb83")
region = Rect2(1112, 0, 1112, 1604)

[sub_resource type="SpriteFrames" id="SpriteFrames_pl11u"]
animations = [{
"frames": [{
"duration": 40.0,
"texture": SubResource("AtlasTexture_sww3w")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_qnb83")
}],
"loop": false,
"name": &"Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suyxu")
}],
"loop": true,
"name": &"closed",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhx41"]
size = Vector2(157.25, 79)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pl11u"]
radius = 54.0
height = 228.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sww3w"]
size = Vector2(170.25, 136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_suyxu"]
size = Vector2(123, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnb83"]
size = Vector2(132.5, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1j6l"]
size = Vector2(89.25, 105.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgl2t"]
atlas = ExtResource("16_37s47")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_qouja"]
atlas = ExtResource("16_37s47")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_wljb1"]
atlas = ExtResource("16_37s47")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2yb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgl2t")
}],
"loop": true,
"name": &"clock",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qouja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wljb1")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}]

[node name="game" type="Node2D"]
script = ExtResource("1_5newe")

[node name="player" parent="." instance=ExtResource("1_uwrxv")]
z_index = 2
position = Vector2(-4023, -205)
collision_mask = 2
max_zoom = 9.0

[node name="boundaries" type="StaticBody2D" parent="."]
position = Vector2(-3538, -197)
scale = Vector2(4, 4)
collision_layer = 2

[node name="bottom boundary" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-2, 10)
shape = SubResource("WorldBoundaryShape2D_yqjtg")

[node name="left boundary" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-80.75, -36.25)
rotation = 1.5782
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="right boundary" type="CollisionShape2D" parent="boundaries"]
position = Vector2(1490.75, -57.5)
shape = SubResource("WorldBoundaryShape2D_iywne")

[node name="floor" type="Polygon2D" parent="."]
z_index = -1
position = Vector2(-3506.033, -386.1427)
rotation = 0.0014689598
scale = Vector2(12.199671, 9.060534)
color = Color(0.24705882, 0.24705882, 0.24705882, 1)
polygon = PackedVector2Array(-53.005264, 32, 235.45264, 32.00006, 523.5481, 32.23097, 514.9662, 63.058002, -53, 60)

[node name="OutsideDetect" type="Area2D" parent="."]
position = Vector2(28, -28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideDetect"]
position = Vector2(2525, -420)
shape = SubResource("RectangleShape2D_sgl2t")

[node name="Interactive" type="Node" parent="."]

[node name="Window Area" type="Area2D" parent="Interactive"]
z_index = 1
position = Vector2(-3278, -604)
script = ExtResource("8_e1j6l")
message_text = "Another dreary day..."

[node name="Window" type="CollisionShape2D" parent="Interactive/Window Area"]
position = Vector2(-11.5, 0)
shape = SubResource("RectangleShape2D_pl11u")

[node name="Window" type="TextureRect" parent="Interactive/Window Area/Window"]
offset_left = -236.5
offset_top = -168.0
offset_right = 237.5
offset_bottom = 153.0
texture = ExtResource("12_ir15t")
metadata/_edit_use_anchors_ = true

[node name="Fridge Area" type="Area2D" parent="Interactive"]
script = ExtResource("9_sww3w")
message_text = "Nothing but a half eaten apple..."

[node name="Fridge" type="CollisionShape2D" parent="Interactive/Fridge Area"]
position = Vector2(701, -437)
shape = SubResource("CapsuleShape2D_e1j6l")

[node name="FridgeAnim" type="AnimatedSprite2D" parent="Interactive/Fridge Area/Fridge"]
position = Vector2(-14.5, -3.1204834)
scale = Vector2(0.37679848, 0.3767984)
sprite_frames = SubResource("SpriteFrames_pl11u")
animation = &"Open"
autoplay = "closed"

[node name="Fridge Sound" type="AudioStreamPlayer2D" parent="Interactive/Fridge Area/Fridge/FridgeAnim"]
stream = ExtResource("11_sww3w")
volume_db = 6.058

[node name="Journal Area" type="Area2D" parent="Interactive"]
script = ExtResource("11_suyxu")
message_text = "Forgot to charge my phone... again..."

[node name="Journal" type="CollisionShape2D" parent="Interactive/Journal Area"]
position = Vector2(-2945, -337)
shape = SubResource("RectangleShape2D_bhx41")

[node name="JournalPhone" type="TextureRect" parent="Interactive/Journal Area/Journal"]
offset_left = -81.0
offset_top = -42.0
offset_right = 83.74414
offset_bottom = 46.0
texture = ExtResource("13_ssvqc")
metadata/_edit_use_anchors_ = true

[node name="Umbrella Area" type="Area2D" parent="Interactive"]
script = ExtResource("13_sgl2t")
message_text = "… Can’t remember where I put my umbrella... "

[node name="Umbrella" type="CollisionShape2D" parent="Interactive/Umbrella Area"]
position = Vector2(2041, -277)
shape = SubResource("CapsuleShape2D_pl11u")

[node name="UmbrellaStand" type="TextureRect" parent="Interactive/Umbrella Area/Umbrella"]
offset_left = -60.0
offset_top = -100.0
offset_right = 59.0
offset_bottom = 93.0
texture = ExtResource("14_1kice")
metadata/_edit_use_anchors_ = true

[node name="Plant Area" type="Area2D" parent="Interactive"]
script = ExtResource("12_pl11u")
message_text = "… Dead… I keep forgetting to water it…"

[node name="Plant" type="CollisionShape2D" parent="Interactive/Plant Area"]
position = Vector2(-876.125, -382)
shape = SubResource("RectangleShape2D_sww3w")

[node name="Plant" parent="Interactive/Plant Area/Plant" instance=ExtResource("9_vtaks")]
anchors_preset = -1
anchor_left = -0.06282552
anchor_right = -0.06282552
anchor_bottom = 0.032407407
offset_left = -83.875
offset_top = -70.0
offset_right = 165.5
offset_bottom = 84.0
stretch_mode = 2
script = null
metadata/_edit_use_anchors_ = true

[node name="Kitty Area" type="Area2D" parent="Interactive"]
script = ExtResource("14_bhx41")
message_text = "Looks like Cookie hid under the bed... 
The storm must've spooked her..."

[node name="Kitty" type="CollisionShape2D" parent="Interactive/Kitty Area"]
position = Vector2(-3637.5, -211)
shape = SubResource("RectangleShape2D_suyxu")

[node name="Kitty" type="TextureRect" parent="Interactive/Kitty Area/Kitty"]
offset_left = -64.5
offset_top = -13.0
offset_right = 66.5
offset_bottom = 36.0
texture = ExtResource("15_pl11u")
metadata/_edit_use_anchors_ = true

[node name="Toaster Area" type="Area2D" parent="Interactive"]
position = Vector2(-3278, -604)
script = ExtResource("16_qnb83")
message_text = "Burnt… just my luck…"

[node name="Toaster" type="CollisionShape2D" parent="Interactive/Toaster Area"]
position = Vector2(4587.75, 129.5)
shape = SubResource("RectangleShape2D_qnb83")

[node name="Toaster" type="TextureRect" parent="Interactive/Toaster Area/Toaster"]
offset_left = -79.75
offset_top = -46.5
offset_right = 81.44995
offset_bottom = 46.5
texture = ExtResource("12_rysoc")
metadata/_edit_use_anchors_ = true

[node name="Alarm Area" type="Area2D" parent="Interactive"]
script = ExtResource("15_e1j6l")

[node name="Alarm" type="CollisionShape2D" parent="Interactive/Alarm Area"]
position = Vector2(-3996.625, -367.875)
shape = SubResource("RectangleShape2D_e1j6l")

[node name="alarm clock" type="AnimatedSprite2D" parent="Interactive/Alarm Area/Alarm"]
position = Vector2(0.62496924, 6.875)
rotation = -0.020107161
scale = Vector2(0.058196995, 0.058196995)
sprite_frames = SubResource("SpriteFrames_v2yb1")
animation = &"run"
autoplay = "run"

[node name="ringring" type="AudioStreamPlayer2D" parent="Interactive/Alarm Area/Alarm/alarm clock"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(1.135, 1.135)
transform = Transform2D(1.135, 0, 0, 1.135, 0, 0)
script = ExtResource("10_vtaks")

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -1.3290001
anchor_top = -1.299
anchor_right = -1.3290001
anchor_bottom = -1.299
offset_left = 1603.2549
offset_top = 898.13965
offset_right = 2473.255
offset_bottom = 1008.1398
theme_override_fonts/font = ExtResource("11_kvpfn")
theme_override_font_sizes/font_size = 33
text = "text here..."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ZoomIn1" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(510.13214, 305.7269)
scale = Vector2(0.38951355, 0.3895137)
texture = ExtResource("16_264po")
script = ExtResource("23_suyxu")

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0
one_shot = true

[node name="Kitchen" type="Sprite2D" parent="."]
position = Vector2(1452, -602)
texture = ExtResource("12_trtic")

[node name="Living Room" type="Sprite2D" parent="."]
position = Vector2(-759, -607)
texture = ExtResource("13_ir15t")

[node name="Bedroom" type="Sprite2D" parent="."]
position = Vector2(-2901, -609)
texture = ExtResource("14_ca42v")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(-220, 70)
color = Color(0.3180198, 0.31801978, 0.31801975, 1)

[node name="rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_p57ef")
volume_db = -17.954
autoplay = true
parameters/looping = false

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_bt5mj")
autoplay = true
parameters/looping = false

[node name="thunder" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_u5sy4")
volume_db = -6.599
autoplay = true
parameters/looping = false

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("30_sgl2t")]
z_index = 3
position = Vector2(1, 0)

[connection signal="body_entered" from="OutsideDetect" to="." method="_on_outside_detect_body_entered"]
[connection signal="mouse_entered" from="Interactive/Window Area" to="Interactive/Window Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Window Area" to="Interactive/Window Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Window Area/Window/Window" to="Interactive/Window Area/Window/Window" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Window Area/Window/Window" to="Interactive/Window Area/Window/Window" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Fridge Area" to="Interactive/Fridge Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Fridge Area" to="Interactive/Fridge Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Journal Area" to="Interactive/Journal Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Journal Area" to="Interactive/Journal Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Journal Area/Journal/JournalPhone" to="Interactive/Journal Area/Journal/JournalPhone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Journal Area/Journal/JournalPhone" to="Interactive/Journal Area/Journal/JournalPhone" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Umbrella Area" to="Interactive/Umbrella Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Umbrella Area" to="Interactive/Umbrella Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Umbrella Area/Umbrella/UmbrellaStand" to="Interactive/Umbrella Area/Umbrella/UmbrellaStand" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Umbrella Area/Umbrella/UmbrellaStand" to="Interactive/Umbrella Area/Umbrella/UmbrellaStand" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Plant Area" to="Interactive/Plant Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Plant Area" to="Interactive/Plant Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Kitty Area" to="Interactive/Kitty Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Kitty Area" to="Interactive/Kitty Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Kitty Area/Kitty/Kitty" to="Interactive/Kitty Area/Kitty/Kitty" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Kitty Area/Kitty/Kitty" to="Interactive/Kitty Area/Kitty/Kitty" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Toaster Area" to="Interactive/Toaster Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Toaster Area" to="Interactive/Toaster Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Toaster Area/Toaster/Toaster" to="Interactive/Toaster Area/Toaster/Toaster" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Toaster Area/Toaster/Toaster" to="Interactive/Toaster Area/Toaster/Toaster" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/Alarm Area" to="Interactive/Alarm Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Alarm Area" to="Interactive/Alarm Area" method="_on_mouse_exited"]
